# jaat-api

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
jaat-api/: __init__.py
jaat_api/: __init__.py  client.py
