[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaat-api"
version = "0.1.0"
description = "Official lightweight client wrapper library for the JAAT API."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
  {name = "Stephen Meisenbacher", email = "sjmeis@gtgd.com"},
]
maintainers = [
  {name = "Stephen Meisenbacher", email = "sjmeis@gtgd.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]
requires-python = ">=3.8"